force-app/main/default/objects/Resident__c/Resident__c.object-meta.xml
<CustomObject>
    <description>Aged Care Resident</description>
    <label>Resident</label>
    <nameField>
        <label>Room Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>