force-app/main/default/objects/Resident__c/fields/AN_ACC_Classification__c.field-meta.xml
<CustomField>
    <fullName>AN_ACC_Classification__c</fullName>
    <label>AN-ACC Classification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>