force-app/main/default/objects/Resident__c/fields/Care_Plan_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Evaluation__c</fullName>
    <formula>CASE(Month_Number__c,7,&quot;July&quot;,8,&quot;August&quot;,9,&quot;September&quot;,10,&quot;October&quot;,11,&quot;November&quot;,12,&quot;December&quot;,13,&quot;January&quot;,14,&quot;February&quot;,15,&quot;March&quot;,16,&quot;April&quot;,17,&quot;May&quot;,&quot;June&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Plan Evaluation</label>
    <type>Text</type>
</CustomField>