force-app/main/default/objects/Resident__c/fields/Classification_Fund__c.field-meta.xml
<CustomField>
    <fullName>Classification_Fund__c</fullName>
    <formula>Classification__r.FUNDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>