force-app/main/default/objects/Resident__c/fields/Classification_Prev__c.field-meta.xml
<CustomField>
    <fullName>Classification_Prev__c</fullName>
    <formula>Classification__r.PREV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Prev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>