force-app/main/default/objects/Resident__c/fields/Due_Care_Plan_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Due_Care_Plan_Evaluation__c</fullName>
    <formula>ADDMONTHS(Last_Care_Plan_Evaluation__c,6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Care Plan Evaluation</label>
    <type>Date</type>
</CustomField>