force-app/main/default/objects/Resident__c/fields/Fund_Past_Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund_Past_Fund__c</fullName>
    <formula>Classification_Fund__c -  Past_Classification_Fund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund - Past Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>