force-app/main/default/objects/Resident__c/fields/Fund_Past_Prev__c.field-meta.xml
<CustomField>
    <fullName>Fund_Past_Prev__c</fullName>
    <formula>Classification_Fund__c -  Past_Classification_Prev__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund - Past Prev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>