force-app/main/default/objects/Resident__c/fields/Last_Care_Plan_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Last_Care_Plan_Evaluation__c</fullName>
    <label>Last Care Plan Evaluation</label>
    <type>Date</type>
</CustomField>