force-app/main/default/objects/Resident__c/fields/Next_Care_Plan_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Next_Care_Plan_Evaluation__c</fullName>
    <formula>Last_Care_Plan_Evaluation__c + 360</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Care Plan Evaluation</label>
    <type>Date</type>
</CustomField>