force-app/main/default/objects/Resident__c/fields/Num_Care_Plans__c.field-meta.xml
<CustomField>
    <fullName>Num_Care_Plans__c</fullName>
    <label>Number of Care Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>