force-app/main/default/objects/Resident__c/fields/Number_of_Care_Plans__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Care_Plans__c</fullName>
    <formula>HYPERLINK(&quot;https://hcac.healthmetrics.com.au/main.php?module=carePlan&amp;customerCode=&quot;&amp;Resident_ID__c&amp;&quot;&amp;action=bulkEdit&quot;, TEXT(Num_Care_Plans__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Care Plans</label>
    <type>Text</type>
</CustomField>