force-app/main/default/objects/Resident__c/fields/Past_Classification__c.field-meta.xml
<CustomField>
    <fullName>Past_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Past Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Resident (Past)</relationshipLabel>
    <relationshipName>Resident</relationshipName>
    <type>Lookup</type>
</CustomField>