force-app/main/default/objects/Resident__c/fields/Past_Classification_Fund__c.field-meta.xml
<CustomField>
    <fullName>Past_Classification_Fund__c</fullName>
    <formula>Past_Classification__r.FUNDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Classification Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>