force-app/main/default/objects/Resident__c/fields/Proform__c.field-meta.xml
<CustomField>
    <fullName>Proform__c</fullName>
    <label>Proform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>