force-app/main/default/objects/Resident__c/fields/Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Pronoun__c</fullName>
    <label>Pronoun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>