force-app/main/default/objects/Resident__c/fields/Proximal__c.field-meta.xml
<CustomField>
    <fullName>Proximal__c</fullName>
    <label>Proximal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>