force-app/main/default/objects/Resident__c/fields/Resident_ID__c.field-meta.xml
<CustomField>
    <fullName>Resident_ID__c</fullName>
    <label>Resident ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>