force-app/main/default/objects/Resident__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>