force-app/main/default/objects/Resident__c/fields/Supervision_Type__c.field-meta.xml
<CustomField>
    <fullName>Supervision_Type__c</fullName>
    <label>Supervision Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>