force-app/main/default/objects/Resident__c/fields/This_Care_Plan_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>This_Care_Plan_Evaluation__c</fullName>
    <label>This Care Plan Evaluation</label>
    <type>Date</type>
</CustomField>