force-app/main/default/objects/Resident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Room_Number__c</columns>
    <columns>First_Name__c</columns>
    <columns>Admission_Date__c</columns>
    <columns>Last_Care_Plan_Evaluation__c</columns>
    <columns>Status__c</columns>
    <columns>This_Care_Plan_Evaluation__c</columns>
    <columns>Assessment_Date__c</columns>
    <columns>AN_ACC_Classification__c</columns>
    <columns>Wing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>