force-app/main/default/objects/Resident__c/listViews/Copy_of_All_Records.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Records</fullName>
    <columns>NAME</columns>
    <columns>Resident_ID__c</columns>
    <columns>Room_Number__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
        <columns>Admission_Date__c</columns>
    <columns>Last_Care_Plan_Evaluation__c</columns>
    <columns>Number_of_Care_Plans__c</columns>
    <columns>Status__c</columns>
    <columns>This_Care_Plan_Evaluation__c</columns>
    <columns>Assessment_Date__c</columns>
    <columns>AN_ACC_Classification__c</columns>
    <columns>Wing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Admission_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>First_Name__c</field>
        <operation>notContain</operation>
        <value>-----</value>
    </filters>
    <filters>
        <field>Room_Number__c</field>
        <operation>notEqual</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Room_Number__c</field>
        <operation>notEqual</operation>
        <value>43</value>
    </filters>
    <filters>
        <field>Room_Number__c</field>
        <operation>notEqual</operation>
        <value>56</value>
    </filters>
    <filters>
        <field>Room_Number__c</field>
        <operation>notEqual</operation>
        <value>80</value>
    </filters>
    <label>Care Plans Left to do</label>
</ListView>