force-app/main/default/objects/Resident__c/listViews/D_Wing.listView-meta.xml
<ListView>
    <fullName>D_Wing</fullName>
    <columns>Room_Number__c</columns>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Admission_Date__c</columns>
    <columns>Last_Care_Plan_Evaluation__c</columns>
    <columns>Status__c</columns>
    <columns>This_Care_Plan_Evaluation__c</columns>
    <columns>Next_Care_Plan_Evaluation__c</columns>
    <columns>Classification__c</columns>
    <columns>Assessment_Date__c</columns>
    <columns>Past_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Wing__c</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>D Wing</label>
</ListView>